--- a/research.Rmd
+++ b/research.Rmd
@@ -33,13 +33,13 @@ output:
 - Koziol, N., **Choi, D.**, Nord, J., Howell Smith, M. C., & Stevens, J. (2019). *4-H Common Measures 2.0 (CM 2.0): National Call for Data*. Lincoln, NE: Nebraska Academy for Methodology, Analytics & Psychometrics.
 
 
-### Manuscripts under review
+### Manuscripts Under Review
 
 - Babik, I., Cunha, A. B., **Choi, D.**, Koziol, N., Harbourne, R., Dusing, S., Westcott-McCoy, S., Bovaird, J., Willett, S., & Lobo, M. A. (under review) The Effect of START-Play Intervention on Reaching-Related Exploratory Behaviors in Children with Neuromotor Delays: Randomized Controlled Trial. Submitted to *Physical and Occupational Therapy in Pediatrics*.
 
 - Cunha, A. B., Babik, I., **Choi, D.**, Koziol, N., Harbourne, R., Dusing, S., Westcott-McCoy, S., Bovaird, J., Willett, S., & Lobo, M. A. (under review) The Impact of Severity of Motor Delay, Timing of Task Mastery, and START-Play Intervention on the Development of Means-End Problem Solving in Young Children. Submitted to *Research in Developmental Disabilities*.
 
-- Babik, I., Cunha, A. B., **Choi, D.**, Koziol, N., Hsu, L. Harbourne, R., Dusing, S., Westcott-McCoy, S., Bovaird, J., Willett, S., & Lobo, M. A. (under review) Affordances in the Home Environment Moderate the Effects of the START-Play Intervention and Motor Delay Severity on Children’s Motor, Language, and Cognitive Development. Submitted to *Developmental Psychology*.
+- Babik, I., Cunha, A. B., **Choi, D.**, Koziol, N., Hsu, L. Harbourne, R., Dusing, S., Westcott-McCoy, S., Bovaird, J., Willett, S., & Lobo, M. A. (under review) Affordances in the Home Environment Moderate the Effects of the START-Play Intervention and Motor Delay Severity on Children’s Motor, Language, and Cognitive Development. Submitted to *Research in Developmental Disabilities*.
 
 
 ## PRESENTATIONS
