--- a/visualization3.Rmd
+++ b/visualization3.Rmd
@@ -157,14 +157,15 @@ order by actor_category
 flextables(q13_dataframe)
 
 q13_dataframe %>% mutate(count = as.integer(count)) %>%
-    ggplot(aes(x=actor_category, y=count, 
+    ggplot(aes(x=actor_category, y=count,  
                label=count, vjust=-0.5)) +
-    geom_col(fill = "#01a08a") +
+    geom_col(fill=wes_palette("Darjeeling1", n=4)) +
     scale_y_continuous(expand = expansion(mult = c(0, .2))) +
     xlab("Category") +
     ylab("Count") +
     geom_text()
-    
+
+
 
 ```
 
@@ -215,7 +216,7 @@ flextables(q15_dataframe)
 q15_dataframe %>% mutate(count = as.integer(count)) %>%
     ggplot(aes(x=watcher_category, y=count, 
                label=count, vjust=-0.5)) +
-    geom_col(fill = c("#ff8b00", "#92f08f")) +
+    geom_col(fill = wes_palette("Darjeeling2", n=2)) +
     scale_y_continuous(expand = expansion(mult = c(0, .2))) +
     xlab("Category") +
     ylab("Count") +
@@ -255,14 +256,15 @@ flextables(distinct(q58_dataframe))
 distinct(q58_dataframe) %>%
     ggplot(aes(x=film_id, y=film_revenue, 
                label=sprintf("$%.0f", film_revenue), vjust=-0.5)) +
-    geom_col(fill = "steelblue") +
+    geom_col(fill = c(wes_palette("GrandBudapest1"),
+                      wes_palette("GrandBudapest2"),wes_palette("Rushmore1", n=2)
+                      )) +
     scale_x_continuous(breaks=seq(1, 10, 1)) +
     scale_y_continuous(expand = expansion(mult = c(0, .2))) +
     xlab("Film ID") +
     ylab("Total revenue ($)") +
     geom_text()
     
-
 ```
 
 
@@ -278,7 +280,6 @@ distinct(q58_dataframe) %>%
 
 
 ```{r}
-
 q80_dataframe <- dbGetQuery(con, 
 "with cte1 as(
     select store_id, 
@@ -303,7 +304,9 @@ from cte2
 
 flextables(q80_dataframe) %>%
     merge_v(j = c("store_id")) %>%
-    valign(j = c("store_id"), valign = "top")
+    valign(j = c("store_id"), valign = "top") %>%
+    align(align="center", part="header")
+
 
 ```
 
